# Asteroids

./: .clang-format  .gitignore  CMakeLists.txt  ConsoleProject.sln  ConsoleProject.vcxproj  ConsoleProject.vcxproj.filters  README.md  build.sh
include/: Actor.h  Asteroids.h  Bullet.h  Ship.h  olcPixelGameEngine.h
src/: Actor.cpp  Actor.h  Asteroids.cpp  Asteroids.h  Bullet.cpp  CMakeLists.txt  Ship.cpp  Ship.h  gen_sources.py  main.cpp  olcPixelGameEngine.h  sources_list.cmake
